<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mBottomItemHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorBottomBack"
        android:clipChildren="false"
        android:padding="10dp"
        >

        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/mHomeIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/home"

            android:contentDescription="@string/app_name"
            />
        <TextView
            android:id="@+id/mHomeTitle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"/>
    </LinearLayout>
    <RelativeLayout
       android:padding="10dp"
        android:background="@color/colorBottomBack"
        android:orientation="vertical"
        android:id="@+id/mBottomItemSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:clipChildren="false">
        <ImageView
            android:id="@+id/mSendIcon"
            android:layout_width="96dp"
            android:layout_height="80dp"
            android:layout_above="@+id/mSendTitle"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_alignParentBottom="true"
            android:id="@+id/mSendTitle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"/>
    </RelativeLayout>
    <LinearLayout
        android:background="@color/colorBottomBack"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/mBottomItemUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/mUserIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/my"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/mUserTitle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/me" />
    </LinearLayout>




</LinearLayout>